@@ -63,7 +63,7 @@ setup(name=PACKAGE,
         'PostgreSQL': ['psycopg2 >= 2.0'],
         'MySQL': ['MySQL-python'],
         'WebDAV': ['PyWebDAV >= 0.9.3'],
-        'PDF': ['openoffice-python'],
+        'unoconv': ['unoconv'],
         'SSL': ['pyOpenSSL'],
         'graphviz': ['pydot'],
         'timezone': ['pytz'],
